--- a/views/hunches.hbs
+++ b/views/hunches.hbs
@@ -1,18 +1,12 @@
-<div class="row">
-
-    <div class="six columns">
-        <h1>Hunches</h1>
+<div class="container col-lg-8 col-lg-offset-2">
+    <div class="row">
+        <div class="col-lg-12">
+            <input type="text" class="col-lg-12" id="searchHunces" name="searchHunces" value="" placeholder="search...">
+        </div>
     </div>
-
-</div>
-<div class="row">
-    <div class="twelve columns">
-        <input type="text" id="searchHunces" name="searchHunces" style="width:50%" value="" placeholder="search...">
-    </div>
-</div>
-<div class="row">
-    <div class="ten columns">
-        <table class="u-full-width" id="hunchesTable">
+    
+    <div class="col-lg-12">
+        <table class="table table-striped" id="hunchesTable">
             <thead>
                 <tr>
                     <th>Emoticon</th>
@@ -45,7 +39,7 @@
             </tbody>
         </table>
     </div>
-    <div class="six columns">
-        <a class="button" href="/hunch/new">New Note!</a>
+    <div class="col-lg-12">
+        <a class="btn btn-primary" href="/hunch/new">New Note!</a>
     </div>
 </div>
