--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,63 +1,65 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8">
+        <title>
+            Hunches Application
+        </title>
+        <!-- Google Sign in
+        ––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <meta name="google-signin-scope" content="profile">
 
-<head>
-    <meta charset="utf-8">
-    <title>
-        Hunches Application
-    </title>
+        <!-- Mobile Specific Metas
+        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Google Sign in
-    ––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta name="google-signin-scope" content="profile">
+        <!-- FONT
+        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-    <!-- Mobile Specific Metas
-    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- CSS
+        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="/css/selectize.default.css">
+        <link rel="stylesheet" type="text/css" href="/css/skeleton.css">
+    
+        <!-- Custom CSS
+        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <link rel="stylesheet" type="text/css" href="/css/custom.css">
+        <!-- Js -->
+        <script src="/js/jquery-2.2.1.min.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
+        <script src="/js/selectize.js"></script>
 
-    <!-- FONT
-    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
-    <!-- CSS
-    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" href="/css/bootstrap.css">
-
-    <!-- Custom CSS
-    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" type="text/css" href="/css/custom.css">
-
-    <!-- Js -->
-
-    <script src="/js/jquery.js"></script>
-    <script src="/js/bootstrap.js"></script>
-	<script src="/js/selectize.js"></script>
-
-    <!-- Custom Js
-    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <script type="text/javascript" src="/js/searchHunces.js"></script>
-    <script type="text/javascript" src="/js/auth.js"></script>
-    <script type="text/javascript" src="/js/interactivity.js"></script>
-
-    <!-- Favicon
-    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="icon" type="image/png" href="/images/favicon.png">
-</head>
-
-<body>
-    <!-- .container is main centered wrapper -->
-    <div class="container">
-
-        {{{body}}}
-        <style media="screen">
-            .work {
+        <!-- Custom Js
+        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <script type="text/javascript" src="/js/searchHunces.js"></script>
+        <script type="text/javascript" src="/js/auth.js"></script>
+        <script type="text/javascript" src="/js/interactivity.js"></script>
+        
+        <!-- Favicon
+        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+        <link rel="icon" type="image/png" href="/images/favicon.png">
+    </head>
+    <body>
+        <!-- .container is main centered wrapper -->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-lg-offset-4">
+                    <a href="/" title="Home">
+                        <h1>Hunches</h1>
+                    </a>
+                </div>
+            </div>
+            {{{body}}}
+            <style media="screen">
+                .work {
                 background-color: dodgerblue;
                 padding : 1em;
                 border : 1px solid black;
                 border-radius: 5%;
-            }
-        </style>
-    </div>
-</body>
-
+                }
+            </style>
+        </div>
+    </body>
 </html>
