Delete confirmation now in the UI. Much better.

--- a/views/edit_hunch.hbs
+++ b/views/edit_hunch.hbs
@@ -71,7 +71,7 @@
         
         <div class="row">
             <input class="col-lg-5 col-lg-offset-5 button-primary" type="submit" value="Submit">
-            <a href="/" class="col-lg-1" title="cancel">cancel</a>
+            <a href="/" class="col-lg-1 btn" title="cancel">cancel</a>
         </div>
     </form>
 </div>
