--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,10 +26,12 @@
         <!-- Custom CSS
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <link rel="stylesheet" type="text/css" href="/css/custom.css">
+
         <!-- Js -->
         <script src="/js/jquery-2.2.1.min.js"></script>
-        <script src="/js/bootstrap.min.js"></script>
         <script src="/js/selectize.js"></script>
+        <script src="/js/bootstrap.js"></script>
+        <script src="/js/bootstrap-confirmation.min.js"></script>
 
         <!-- Custom Js
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
