--- a/views/hunches.hbs
+++ b/views/hunches.hbs
@@ -1,12 +1,10 @@
 <div class="container col-lg-8 col-lg-offset-2">
-    <div class="row">
-        <div class="col-lg-12">
-            <input type="text" class="col-lg-12" id="searchHunces" name="searchHunces" value="" placeholder="search...">
-        </div>
+    <div>
+        <input type="text" class="col-lg-12" id="searchHunces" name="searchHunces" value="" placeholder="search...">
     </div>
     
-    <div class="col-lg-12">
-        <table class="table table-striped" id="hunchesTable">
+    <div>
+        <table class="table table-striped table-bordered" id="hunchesTable">
             <thead>
                 <tr>
                     <th>Emoticon</th>
@@ -14,32 +12,32 @@
                     <th>Coders</th>
                     <th>Tags</th>
                     <th>Description</th>
-                    <th></th>
-                    <th></th>
+                    <th colspan="2"></th>
                 </tr>
             </thead>
             <tbody>
                 {{#if hunches}}
-                    {{#each hunches}}
-                        <tr>
-                            <td><img src="/emoticons/{{rating}}.gif" alt=""></td>
-                            <td>{{date_created}}</td>
-                            <td>{{coders}}</td>
-                            <td> {{tags}}</td>
-                            <td>{{description}}</td>
-                            <td><a class="editHunch" href="/hunch/edit/{{id}}">Edit</a></td>
-                            <td><a class="deleteHunch" href="/hunch/delete/{{id}}">Delete</a></td>
-                        </tr>
-                    {{/each}}
+                {{#each hunches}}
+                <tr>
+                    <td><img src="/emoticons/{{rating}}.gif" alt=""></td>
+                    <td>{{date_created}}</td>
+                    <td>{{coders}}</td>
+                    <td> {{tags}}</td>
+                    <td>{{description}}</td>
+                    <td><a class="editHunch btn" href="/hunch/edit/{{id}}">Edit</a></td>
+                    <td><a class="deleteHunch btn" data-placement="right" data-toggle="confirmation" data-href="/hunch/delete/{{id}}">Delete</a>
+                    </td>
+                </tr>
+                {{/each}}
                 {{else}}
-                    <tr>
-                        <td colspan="5">There are no saved hunches in the datadase.<td>
-                    </tr>
+                <tr>
+                    <td colspan="5">There are no saved hunches in the datadase.<td>
+                </tr>
                 {{/if}}
             </tbody>
         </table>
     </div>
-    <div class="col-lg-12">
+    <div class="row">
         <a class="btn btn-primary" href="/hunch/new">New Note!</a>
     </div>
 </div>
