--- a/views/hunches.hbs
+++ b/views/hunches.hbs
@@ -24,8 +24,8 @@
                     <td>{{coders}}</td>
                     <td> {{tags}}</td>
                     <td>{{description}}</td>
-                    <td><a class="editHunch btn" href="/hunch/edit/{{id}}">Edit</a></td>
-                    <td><a class="deleteHunch btn" data-placement="right" data-toggle="confirmation" data-href="/hunch/delete/{{id}}">Delete</a>
+                    <td><a class="editHunch btn btn-default" href="/hunch/edit/{{id}}">Edit</a></td>
+                    <td><a class="deleteHunch btn btn-default" data-placement="top" data-toggle="confirmation" data-href="/hunch/delete/{{id}}">Delete</a>
                     </td>
                 </tr>
                 {{/each}}
